--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             class="fab fa-facebook-f"
           ></a>
           <a
-            href="https://www.instagram.com/nikunjrathiop/"
+            href="https://www.instagram.com/inikunjrathi/"
             target="_blank"
             class="fab fa-instagram"
           ></a>
           <a
-            href="https://github.com/NikunjRathi1906"
+            href="https://github.com/inikunjrathi"
             target="_blank"
             class="fab fa-github"
           ></a>
